<resources>
    <string name="app_name">رمضان - Ramadan</string>

    <!--Menus-->
    <string name="menu_home">الرئيسية</string>
    <string name="menu_ebadat">عبادات</string>
    <string name="menu_zekr">أذكار</string>
    <string name="menu_books">المكتبة</string>
    <string name="menu_images">صور</string>
    <string name="background">قم بإختيار التطبيق المناسب</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>