<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_item"
        android:icon="@drawable/ic_home1"
        android:title="@string/menu_home" />



    <item
        android:id="@+id/ebadat_item"
        android:icon="@drawable/ic_moon1"
        android:title="@string/menu_ebadat" />

    <item
        android:id="@+id/azkar_item"
        android:icon="@drawable/ic_dua_hands"
        android:title="@string/menu_zekr" />

    <item
        android:id="@+id/books_item"
        android:icon="@drawable/ic_books"
        android:title="@string/menu_books" />

    <item
        android:id="@+id/image_item"
        android:icon="@drawable/ic_photo1"
        android:title="@string/menu_images" />

</menu>